--- a/InternalWebSystems.csproj
+++ b/InternalWebSystems.csproj
@@ -163,6 +163,7 @@
     <Compile Include="Controllers\CMSController.cs" />
     <Compile Include="Controllers\CustomerServiceController.cs" />
     <Compile Include="Controllers\OverviewController.cs" />
+    <Compile Include="Models\AvailableReportModel.cs" />
     <Compile Include="Models\SkuStockReport.cs" />
     <Compile Include="Models\OdsReport.cs" />
     <Compile Include="Models\OdsVariation.cs" />
@@ -209,6 +210,7 @@
     <Content Include="Content\Images\Stormtrooper-Silohuette-Hot-Pink.png" />
     <Content Include="Content\Login.css" />
     <Content Include="Content\Scripts\Dashboard.js" />
+    <Content Include="Content\Scripts\HeaderAdvertCarousel.js" />
     <Content Include="Content\Scripts\jquery-ui.js" />
     <Content Include="Content\Scripts\jquery.table2excel.js" />
     <Content Include="Content\Scripts\Metadata.js" />
@@ -347,7 +349,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Main.cshtml" />
-    <Content Include="Views\Reporting\Index.cshtml" />
+    <Content Include="Views\Reporting\Index2.cshtml" />
     <Content Include="Views\Reporting\BuyerGodReport.cshtml" />
     <Content Include="Views\Reporting\ReportsByDepartment.cshtml" />
     <Content Include="Views\Shared\_LayoutLogin.cshtml" />
@@ -380,7 +382,8 @@
     <Content Include="Views\Tv\SkuEdit.cshtml" />
     <Content Include="Views\Reporting\OdsReport.cshtml" />
     <Content Include="Views\Reporting\SkuStockReport.cshtml" />
-    <Content Include="Views\Reporting\Index2.cshtml" />
+    <Content Include="Views\Reporting\Index.cshtml" />
+    <Content Include="Views\CMS\HeaderAdvertCarousel.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
