--- a/Web.config
+++ b/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="ConnectionString" connectionString="server=88.208.244.21;database=HochandaDB1;uid=H_apps_7yd9bqs14;password=x4jsQvMst!Y@T;" />
+    <add name="ConnectionString" connectionString="server=88.208.232.193;database=HochandaDB1;uid=H_apps_X784gBLc11;password=d714BmN@Ks!792;" />
     <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\aspnet-InternalWebSystems-20151209085316.mdf;Initial Catalog=aspnet-InternalWebSystems-20151209085316;Integrated Security=True;User Instance=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
